--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,15 @@ markdown: redcarpet
 
 excerpt_separator: <!-- more -->
 
-title : &技术之颠
+title : 进击的xp!
 tagline: OpenCV OpenCL 
 author : 
-  name : 钟典
-  email : code@myaiol.com
-  github : https://github.com/zhongdian121
+  name : pengx17
+  email : pengxiao@outlook.com
+  github : https://github.com/pengx17
+  weibo : http://www.weibo.com/1773498301/profile
+  linkedin : http://cn.linkedin.com/pub/peng-xiao/40/92a/636
+  qq : 248901881
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
@@ -23,7 +26,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://blog.ruc0.com
+production_url : http://pengx17.me
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -80,7 +83,7 @@ pengx :
   comments :
     provider : duoshuo
     duoshuo :
-      short_name : zhongdian121
+      short_name : pengx17
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
