--- a/_config.yml
+++ b/_config.yml
@@ -9,15 +9,12 @@ markdown: redcarpet
 
 excerpt_separator: <!-- more -->
 
-title : 进击的xp!
+title : 技术之颠
 tagline: OpenCV OpenCL 
 author : 
-  name : pengx17
-  email : pengxiao@outlook.com
-  github : https://github.com/pengx17
-  weibo : http://www.weibo.com/1773498301/profile
-  linkedin : http://cn.linkedin.com/pub/peng-xiao/40/92a/636
-  qq : 248901881
+  name : 钟典
+  email : ceo@myaiol.com
+  github : https://github.com/zhongdian121
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
@@ -26,7 +23,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://pengx17.me
+production_url : http://blog.ruc0.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
